.stack-work/logs/stack-run-0.1.1.4.log
Configuring stack-run-0.1.1.4...
Preprocessing executable 'stack-run' for stack-run-0.1.1.4..
Building executable 'stack-run' for stack-run-0.1.1.4..

[;1munix/System/Console/Questioner.hs:4:14: [;1m[35mwarning:[0m[0m[;1m[0m[0m[;1m
    -XOverlappingInstances is deprecated: instead use per-instance pragmas OVERLAPPING/OVERLAPPABLE/OVERLAPS[0m[0m
[;1m[34m  |[0m[0m
[;1m[34m4 |[0m[0m {-# LANGUAGE [;1m[35mOverlappingInstances[0m[0m  #-}
[;1m[34m  |[0m[0m[;1m[35m              ^^^^^^^^^^^^^^^^^^^^[0m[0m
[0m[0m[0m[1 of 5] Compiling System.Console.Questioner.Autocomplete ( unix/System/Console/Questioner/Autocomplete.hs, .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/stack-run/stack-run-tmp/System/Console/Questioner/Autocomplete.o )
[2 of 5] Compiling System.Console.Questioner.Util ( unix/System/Console/Questioner/Util.hs, .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/stack-run/stack-run-tmp/System/Console/Questioner/Util.o )
[3 of 5] Compiling System.Console.Questioner.ProgressIndicators ( unix/System/Console/Questioner/ProgressIndicators.hs, .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/stack-run/stack-run-tmp/System/Console/Questioner/ProgressIndicators.o )
[4 of 5] Compiling System.Console.Questioner ( unix/System/Console/Questioner.hs, .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/stack-run/stack-run-tmp/System/Console/Questioner.o )
[5 of 5] Compiling Main             ( src/Main.hs, .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/stack-run/stack-run-tmp/Main.o )

[;1msrc/Main.hs:18:1: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    Could not find module ‘Distribution.PackageDescription.Parse’
    Perhaps you meant
      Distribution.PackageDescription.Parsec (needs flag -package-key Cabal-2.4.0.1)
      Distribution.PackageDescription.Parsec (from Cabal-2.4.1.0)
      Distribution.PackageDescription.Check (needs flag -package-key Cabal-2.4.0.1)
    Use -v to see a list of the files searched for.[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m18 |[0m[0m [;1m[31mimport           Distribution.PackageDescription.Parse[0m[0m
[;1m[34m   |[0m[0m[;1m[31m ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m[0m
[0m[0m[0m